--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -25,6 +25,8 @@
       </div>
     </nav>
 
-    <%= yield %>
+    <div class="container main-container">
+      <%= yield %>
+    </div>
   </body>
 </html>
