--- a/app/views/admin/properties/_form.html.erb
+++ b/app/views/admin/properties/_form.html.erb
@@ -7,5 +7,5 @@
   <%= f.input :region %>
   <%= f.input :locality %>
   <%= f.input :images, as: :file, input_html: { multiple: true }, hint: "Minimum 3 images" %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class: "btn-primary" %>
 <% end %>
