--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="#page-top">Properties App</a>
+        <a class="navbar-brand" href="<%= admin_properties_path %>">Properties App</a>
         <%
 =begin%>
  <ul class="navbar-nav ms-auto">
@@ -25,7 +25,13 @@
       </div>
     </nav>
 
-    <div class="container main-container">
+    <div class="container main-container mb-5">
+      <% flash.each do |type, message| %>
+        <div class="alert alert-<%= alert_class_for_type(type) %> alert-dismissible fade show" role="alert">
+          <%= message %>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
