--- a/app/views/admin/properties/index.html.erb
+++ b/app/views/admin/properties/index.html.erb
@@ -1,3 +1,6 @@
-<h1>Properties</h1>
+<div class="d-flex align-items-center">
+  <h1 class="me-3">Properties</h1>
+  <%= link_to 'Add property', new_admin_property_path, class: 'btn btn-success' %>
+</div>
 
 <%= render 'table' %>
