--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top py-3" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand" href="/">Properties App</a>
+      </div>
+    </nav>
+
+    <div class="container main-container mb-5">
+      <%= yield %>
+    </div>
   </body>
 </html>
