Add pagination to list properties view

--- a/app/views/properties/_list.html.erb
+++ b/app/views/properties/_list.html.erb
@@ -1,3 +1,7 @@
 <% @properties.each do |property| %>
   <%= render "card_detail", property: property  %>
 <% end %>
+
+<div class="properties-pagination fixed-bottom">
+  <%= render_pagination(@properties.current_page, @properties.total_pages) %>
+</div>
