--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -15,13 +15,12 @@
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="<%= admin_properties_path %>">Properties App</a>
-        <%
-=begin%>
- <ul class="navbar-nav ms-auto">
-          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Log out</a></li>
+
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item mx-0 mx-lg-1">
+            <%= link_to 'Log out', destroy_user_session_path, class: 'nav-link py-3 px-0 px-lg-3 rounded' %>
+          </li>
         </ul>
-<%
-=end%>
       </div>
     </nav>
 
