--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
     <nav class="navbar navbar-expand-lg bg-white fixed-top py-3" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="/">Properties App</a>
+
+        <ul class="navbar-nav ms-auto">
+          <% if user_signed_in? %>
+            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="<%= admin_properties_path %>">Admin</a></li>
+          <% else %>
+            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="<%= new_user_registration_path %>">Sign up</a></li>
+            <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="<%= new_user_session_path %>">Log in</a></li>
+          <% end %>
+        </ul>
       </div>
     </nav>
 
