--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -18,7 +18,10 @@
 
         <ul class="navbar-nav ms-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <%= link_to 'Log out', destroy_user_session_path, class: 'nav-link py-3 px-0 px-lg-3 rounded' %>
+            <%= link_to 'Portal', root_path, class: 'nav-link py-3 px-0 px-lg-3 rounded text-light' %>
+          </lig>
+          <li class="nav-item mx-0 mx-lg-1">
+            <%= link_to 'Log out', destroy_user_session_path, class: 'nav-link py-3 px-0 px-lg-3 rounded text-light' %>
           </li>
         </ul>
       </div>
